# steelOptimaV2

./: .gitignore  CLAUDE.md
server/: pyproject.toml  tmp_raster_check.py
server/app/: config.py  main.py
server/app/api/: bom.py  chat.py  cutouts.py  documents.py  export.py  health.py  jobs.py  orders.py  planning.py  pricing.py  projects.py  tables.py  telemetry.py
server/app/bom/: service.py  shapes.py
server/app/chat/: context.py  service.py
server/app/db/: migrate.py  models.py  session.py
server/app/extraction/: ink.py  ocr.py  raster.py  scale.py  scoring.py  service.py  vector.py
server/app/fusion/: engine.py
server/app/ingestion/: overlay.py  page_classifier.py  renderer.py  service.py
server/app/orders/: nesting.py  optimizer.py
server/app/planning/: analyze.py
server/app/schemas/: cutouts.py  documents.py  jobs.py  projects.py  tables.py  telemetry.py
server/app/tables/: aggregate.py  cells.py  classify.py  grid.py  normalize.py  pricing.py  (+3 more)
server/tests/: conftest.py  test_bom.py  test_chat.py  test_cutouts.py  test_document_move.py  test_export.py  test_extraction.py  test_finalize.py  test_ingestion.py  test_ink.py  test_jobs_ws.py  test_nesting.py  test_optimizer.py  test_planning_analyze.py  test_pricing_orders.py  test_projects.py  test_queue.py  test_raster.py  test_scale.py  test_table_cells.py  test_table_grid.py  test_table_job.py  test_table_normalize.py  test_table_review.py  test_table_validate.py  test_verify.py  test_vlm.py
server/tools/: eval_detection.py  eval_tables.py  inspect_ink.py  make_synthetic_tables.py
(+63 files in other folders)
