[project]
name = "steeloptima-server"
version = "0.1.0"
description = "Hybrid CV+VLM cutout extraction engine for industrial blueprints"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pymupdf>=1.24",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "shapely>=2.0",
    "opencv-python-headless>=5.0.0.93",
    "numpy>=2.5.0",
    "rapidocr-onnxruntime>=1.4.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
